--- a/src/main/resources/oc_mock.fxml
+++ b/src/main/resources/oc_mock.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -27,11 +28,13 @@
        <RadioButton fx:id="primary" layoutX="213.0" layoutY="235.0" mnemonicParsing="false" text="Primario" />
        <RadioButton fx:id="secondary" layoutX="344.0" layoutY="235.0" mnemonicParsing="false" text="Seconsario" />
        <Label layoutX="69.0" layoutY="327.0" text="Mezzi soccorso" />
-       <ComboBox fx:id="vehicles" layoutX="214.0" layoutY="322.0" prefHeight="31.0" prefWidth="341.0" />
+       <CheckBox fx:id="hotelBravoChopper" layoutX="213.0" layoutY="327.0" mnemonicParsing="false" text="HotelBravo" />
+       <CheckBox fx:id="elimike" layoutX="346.0" layoutY="327.0" mnemonicParsing="false" text="Elimike" />
+       <CheckBox fx:id="ambulance" layoutX="451.0" layoutY="327.0" mnemonicParsing="false" text="Ambulanza" />
        <Label layoutX="69.0" layoutY="277.0" text="Numero pazienti" />
        <Spinner fx:id="patientsNumber" layoutX="213.0" layoutY="272.0" prefHeight="31.0" prefWidth="341.0" />
        <Label layoutX="69.0" layoutY="407.0" text="Note" />
        <TextArea fx:id="notes" layoutX="213.0" layoutY="378.0" prefHeight="78.0" prefWidth="341.0" />
-       <Button layoutX="222.0" layoutY="474.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="163.0" text="Conferma evento" />
+       <Button fx:id="confirmButton" layoutX="222.0" layoutY="474.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="163.0" text="Conferma evento" />
    </children>
 </AnchorPane>
